fixed sizing on smaller displays

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,18 +1,18 @@
 .container {
-  @apply bg-stone-200 pt-8 pl-72 pr-72 animate-fadein;
+  @apply min-h-screen min-w-full bg-stone-200 pt-8 xl:pl-72 xl:pr-72 animate-fadein;
 }
 
 .main {
-  @apply min-h-screen flex-auto justify-center items-center;
+  @apply h-full w-full flex-col justify-center items-center;
 }
 
 .title {
   text-shadow: 1px 1px 3px rgb(0 0 0 / 29%), 2px 4px 7px rgb(73 64 125 / 35%);
-  @apply text-7xl text-stone-800 text-left mx-8;
+  @apply text-4xl xl:text-7xl text-stone-800 text-left mx-8;
 }
 
 .description {
-  @apply text-3xl text-stone-800 text-left font-thin mx-8;
+  @apply text-xl xl:text-3xl text-stone-800 text-left font-thin mx-8;
 }
 
 .pgNormal {
@@ -20,11 +20,11 @@
 }
 
 .icon {
-  @apply mx-4 h-16 w-16 transition ease-in-out origin-bottom-right duration-300 hover:scale-125 hover:-rotate-12;
+  @apply mx-8 h-16 w-16 transition ease-in-out origin-bottom-right duration-300 hover:scale-125 hover:-rotate-12;
 }
 
 .wrapper {
-  @apply flex justify-between items-center;
+  @apply flex justify-between items-center ;
 }
 
 .section {
